:recycle: FCM 설정 변경